<resources>
    <string name="app_name">Assignment2</string>
    <string name="action_create">Create</string>
    <string name="action_view_contacts">View Contacts</string>
    <string name="action_push_today">Push Today</string>
    <string name="action_delete_expired">Delete Expired</string>
    <string name="action_delete_today">Delete Today</string>
    <string name="action_delete_all">Delete All</string>
    <string name="edit_title_hint">Enter a meeting title</string>
    <string name="date_label">Date:</string>
    <string name="time_label">Time:</string>
    <string name="duration_label">Duration(mins):</string>
    <string name="invitees_label">Invitees:</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_create">Create</string>
    <string name="button_invite">Invite</string>
    <string name="button_delete">Delete</string>
    <string name="button_push_today">Push Today</string>
    <string name="button_delete_expired">Delete Expired</string>
    <string name="button_delete_today">Delete Today</string>
    <string name="button_delete_all">Delete All</string>
    <string name="message_push">Today\'s meetings have been pushed</string>
    <string name="message_expired">Expired meetings have been deleted</string>
    <string name="message_delete_today">Today\'s meetings have been deleted</string>
    <string name="message_delete_all">All meetings have been deleted</string>
    <string name="message_confirm_push_today">Are you sure you want to push out meetings scheduled for today?</string>
    <string name="message_confirm_delete_today">Are you sure you want to delete meetings scheduled for today?</string>
    <string name="message_confirm_delete_all">Are you sure you want to delete all meetings?</string>
    <string name="message_confirm_delete_expired">Are you sure you want to delete expired meetings?</string>
    <string name="message_created">The meeting has been created</string>
    <string name="message_deleted">The meeting has been deleted</string>
    <string name="confirm_title">Confirm Please</string>

    <string-array name="durations_array">
        <item>0</item>
        <item>15</item>
        <item>30</item>
        <item>45</item>
        <item>60</item>
        <item>75</item>
        <item>90</item>
        <item>105</item>
        <item>120</item>
    </string-array>
</resources>
