<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item
        android:id="@+id/action_create"
        android:orderInCategory="100"
        android:title="@string/action_create"
        android:icon="@drawable/plus"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_view_contacts"
        android:orderInCategory="200"
        android:title="@string/action_view_contacts"
        android:icon="@drawable/contacts_ico"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_push_today"
        android:title="@string/action_push_today"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete_expired"
        android:title="@string/action_delete_expired"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete_today"
        android:title="@string/action_delete_today"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_delete_all"
        android:title="@string/action_delete_all"
        app:showAsAction="never" />

    />
</menu>
